Upgrade to junit 5